--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -936,7 +936,27 @@
     model: Axon 7 Mini
   os_family: Android
   browser_family: Chrome
-- 
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.0; en-US; E3 Dual Build/NRD90M) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 UCBrowser/12.9.7.1153 (SpeedMode) U4/1.0 UCWEB/2.0 Mobile Safari/534.30
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: "12.9.7.1153"
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: SO
+    model: Xperia E3 Dual
+  os_family: Android
+  browser_family: Unknown
+-
   user_agent: Mozilla/5.0 (Linux; Android 7.1.2; Z999 Build/N2G47H; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/67.0.3396.87 Mobile Safari/537.36
   os:
     name: Android
