--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -2837,3 +2837,23 @@
     model: X428 Astute
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.0.4; Infinityll Build/IMM76D) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.2959.138 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "4.0.4"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: "60.0.2959.138"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: EX
+    model: Infinity II
+  os_family: Android
+  browser_family: Chrome
