--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4544,7 +4544,7 @@ Evolveo:
 
 # Explay
 Explay:
-  regex: 'Explay|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-3]|RioPlay|Leader'
+  regex: 'Explay|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-3]|RioPlay|Leader|Infinityll'
   device: 'tablet'
   models:
     - regex: 'ActiveD[ _]7.4[ _]3G'
@@ -4553,6 +4553,8 @@ Explay:
       model: 'ActiveD 8.2 3G'
     - regex: 'CinemaTV[ _]3G'
       model: 'CinemaTV 3G'
+    - regex: 'Infinityll'
+      model: 'Infinity II'
     - regex: 'Informer[ _]([0-9]+(?:[ _]3G)?)'
       model: 'Informer $1'
     - regex: 'Surfer[ _]([0-9\.]+(?:[ _]3G)?)'
