--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13854,7 +13854,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II|FestXL)[;)/ ]'
+  regex: 'HIGHSCREEN|(Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL|)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice Max|Power Rage Evo|Zera[ _][UFS])[;)/ ]'
@@ -13873,6 +13873,8 @@ Highscreen:
       model: 'Easy F Pro'
     - regex: 'BOOST II[;)/ ]'
       model: 'Boost 2'
+    - regex: 'BOOST IIse[;)/ ]'
+      model: 'Boost 2 SE'
 
 # CVTE
 CVTE:
