--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -9435,3 +9435,23 @@
     model: One Touch Pixi Avion 4G LTE
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; A464BG Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.91 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 55.0.2883.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: AL
+    model: One Touch Pixi Glitz
+  os_family: Android
+  browser_family: Chrome
