--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2307,7 +2307,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732A|V1818CT|V19[01]1A|V1932[AT]|V1916A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732A|V1818CT|V19[01]1A|V1932[AT]|V1916A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V1962A'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2328,6 +2328,8 @@ Vivo:
       model: 'S1 Pro'
     - regex: 'V1932[AT][);/ ]'
       model: 'S5'
+    - regex: 'V1962A[);/ ]'
+      model: 'S6 5G'
     - regex: 'V1941A[);/ ]'
       model: 'U3'
     - regex: 'V1928A[);/ ]'
