Adds detection for various Fly devices

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12943,7 +12943,7 @@ Vivax:
 
 # Fly
 Fly:
-  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ[0-9]{3,})[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?: Build|[;/\)])'
+  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!1010)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?: Build|[;/\)])'
   device: 'smartphone'
   models:
     - regex: '(?:Fly_)?IQ310(?: Build|[;/\)])'
@@ -13062,10 +13062,16 @@ Fly:
       model: 'Glory'
     - regex: '(?:Fly_)?IQ432(?: Build|[;/\)])'
       model: 'Era Nano 1'
-    - regex: '(?:Fly_)?IQ434(?: Build|[;/\)])'
-      model: 'Era Nano 5'
     - regex: '(?:Fly_)?IQ436(?: Build|[;/\)])'
       model: 'Era Nano 3'
+    - regex: '(?:Fly_)?IQ4490(?: Build|[;/\)])'
+      model: 'Era Nano 4'
+    - regex: '(?:Fly_)?IQ434(?: Build|[;/\)])'
+      model: 'Era Nano 5'
+    - regex: '(?:Fly_)?IQ4406(?: Build|[;/\)])'
+      model: 'Era Nano 6'
+    - regex: '(?:Fly_)?IQ436i(?: Build|[;/\)])'
+      model: 'Era Nano 9'
     - regex: '(?:Fly_)?IQ440(?: Build|[;/\)])'
       model: 'Energy'
     - regex: '(?:Fly_)?IQ4401(?: Build|[;/\)])'
@@ -13086,6 +13092,10 @@ Fly:
       model: 'Magic'
     - regex: '(?:Fly_)?IQ447(?: Build|[;/\)])'
       model: 'Era Life 1'
+    - regex: '(?:Fly_)?IQ456(?: Build|[;/\)])'
+      model: 'Era Life 2'
+    - regex: '(?:Fly_)?IQ4409 Quad(?: Build|[;/\)])'
+      model: 'Era Life 4'
     - regex: '(?:Fly_)?IQ448(?: Build|[;/\)])'
       model: 'Chic'
     - regex: '(?:Fly_)?IQ449(?: Build|[;/\)])'
@@ -13100,14 +13110,10 @@ Fly:
       model: 'Ego Vision 1'
     - regex: '(?:Fly_)?IQ454(?: Build|[;/\)])'
       model: 'Evo Tech 1'
-    - regex: '(?:Fly_)?IQ456(?: Build|[;/\)])'
-      model: 'Era Life 2'
     - regex: '(?:Fly_)?IQ4403(?: Build|[;/\)])'
       model: 'Energy 3'
     - regex: '(?:Fly_)?IQ4404(?: Build|[;/\)])'
       model: 'Spark'
-    - regex: '(?:Fly_)?IQ4406(?: Build|[;/\)])'
-      model: 'Era Nano 6'
     - regex: '(?:Fly_)?IQ4410 Quad(?: Build|[;/\)])'
       model: 'Phoenix'
     - regex: '(?:Fly_)?IQ4411(?: Build|[;/\)])'
@@ -13120,11 +13126,9 @@ Fly:
       model: 'Evo Tech 3'
     - regex: '(?:Fly_)?IQ4415 Quad(?: Build|[;/\)])'
       model: 'Era Style 3'
-    - regex: '(?:Fly_)?IQ4490(?: Build|[;/\)])'
-      model: 'Era Nano 4'
     - regex: '(?:Fly_)?IQ4504 Quad(?: Build|[;/\)])'
       model: 'Evo Energy 5'
-    - regex: '(?:Fly_)?IQ([0-9]+) ?(?:Quad|Firebird|Quattro)? Build'
+    - regex: '(?:Fly_)?IQ([0-9]+[i]? ?(?:Quad|Firebird|Quattro)?)(?: Build|[;/\)])'
       model: 'IQ$1'
     - regex: 'Fly[ _\-]?([a-z0-9_]+)/'
       model: '$1'
@@ -13854,7 +13858,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL|)[;)/ ]'
+  regex: 'HIGHSCREEN|(Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice Max|Power Rage Evo|Zera[ _][UFS])[;)/ ]'
