feat(device) detect new brand Newland model: MT90 Orca (NLS-MT90)
# mobile data collector or bar/qc scanner

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14482,3 +14482,9 @@ Prixton:
   regex: '(T7012Q)[);/ ]'
   device: 'tablet'
   model: '$1'
+
+# Newland
+Newland:
+  regex: '(NLS-MT90)[);/ ]'
+  device: 'smartphone'
+  model: 'MT90 Orca'
