--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14488,3 +14488,13 @@ Newland:
   regex: '(NLS-MT90)[);/ ]'
   device: 'smartphone'
   model: 'MT90 Orca'
+
+# Orbic
+Orbic:
+  regex: '(RC555L|RC501L)[);/ ]'
+  device: 'smartphone'
+  models:
+    - regex: 'RC555L[);/ ]'
+      model: 'Wonder'
+    - regex: 'RC501L[);/ ]'
+      model: 'Slim'
