--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -9635,3 +9635,23 @@
     model: A1X
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Z5031O) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.117 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 81.0.4044.117
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: ZT
+    model: Optus X Spirit 2
+  os_family: Android
+  browser_family: Chrome
