feat(device) detect brand Huawei model: Honor 20I (HRY-AL00T)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5273,7 +5273,7 @@ Huawei:
       model: 'Honor 20'
     - regex: 'LRA-AL00[);/ ]'
       model: 'Honor 20 Lite'
-    - regex: '(HRY-AL00Ta)[);/ ]'
+    - regex: '(HRY-AL00T[a]?)[);/ ]'
       model: 'Honor 20I'
     - regex: 'YAL-(L41|AL10)[);/ ]'
       model: 'Honor 20 Pro'
