--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2313,7 +2313,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732A|V1818CT|V19[01]1A|V1932[AT]|V1916A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V1962A'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732A|V1818CT|V19[01]1A|V1932[AT]|V191[36]A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V1962A'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2410,6 +2410,8 @@ Vivo:
       model: 'Y71i'
     - regex: 'V1731CA[);/ ]'
       model: 'Y73'
+    - regex: 'V1913A[);/ ]'
+      model: 'Y7s'
     - regex: 'vivo 180([38]|8i)[);/ ]'
       model: 'Y81'
     - regex: 'vivo 1812[);/ ]'
