feat(device) detect new brand RED model: Hydrogen One (H1A1000); feat(device) detect brand NUU model: A6L-C; feat(device) detect brand Alcatel model: Raven (A574BL); feat(device) detect brand Vivo model: Y81s (V1732T); feat(device) detect brand SUGAR model: S9;

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1022,7 +1022,7 @@ Arian Space:
 
 # Alcatel
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|4114E|5001[ADJTU](?:_EEA|_RU)?|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[AD](?:_RU)?|5025[DEG]|5026[AD]|5027B|5032W|5033[AX]|5033D[ _]RU|5034D(_RU)?|5038[ADEX]|5041C|5042[ADEFGWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[AD](_RU)?|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY](_RU)?|5059[ADXYZ](_RU)?|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI](_RU)?|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOY]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7055A|7070X|8030Y|8050[DEGX]|8063|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9022X|9203A|A570BL|I213|I216X|A50[13]DL|A571VL|A464BG)[);/ ]|TIMXL'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|4114E|5001[ADJTU](?:_EEA|_RU)?|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[AD](?:_RU)?|5025[DEG]|5026[AD]|5027B|5032W|5033[AX]|5033D[ _]RU|5034D(_RU)?|5038[ADEX]|5041C|5042[ADEFGWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[AD](_RU)?|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY](_RU)?|5059[ADXYZ](_RU)?|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI](_RU)?|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOY]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7055A|7070X|8030Y|8050[DEGX]|8063|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9022X|9203A|A570BL|I213|I216X|A50[13]DL|A574BL|A571VL|A464BG)[);/ ]|TIMXL'
   device: 'smartphone'
   models:
     - regex: '(?:5022[EDX]|5070D)[);/ ]'
@@ -1127,6 +1127,8 @@ Alcatel:
       model: 'One Touch Hero 2C'
     - regex: '5065N[);/ ]'
       model: 'TRU'
+    - regex: 'A574BL[);/ ]'
+      model: 'Raven'
     - regex: '5056I'
       model: 'One Touch Optus X Smart'
     - regex: 'A570BL[);/ ]'
@@ -2313,7 +2315,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732A|V1818CT|V19[01]1A|V1932[AT]|V191[36]A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V1962A'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[36][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1A|V1932[AT]|V191[36]A|V192[13]A|V1928A|V193[04]A|V1941A|V1938CT|V1938T|V1730EA|V1962A'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2416,7 +2418,7 @@ Vivo:
       model: 'Y81'
     - regex: 'vivo 1812[);/ ]'
       model: 'Y81i'
-    - regex: 'V1732A[);/ ]'
+    - regex: 'V1732[AT][);/ ]'
       model: 'Y81s'
     - regex: 'vivo 1726[);/ ]'
       model: 'Y83 Pro'
@@ -8631,7 +8633,7 @@ Nomi:
 
 # NUU Mobile
 NUU Mobile:
-  regex: 'NUU_|(?:N(5702|5001)L|S6001L)[;)/ ]'
+  regex: 'NUU_|((?:N(5702|5001)L|S6001L)|A6L-C)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: 'NUU_A1'
@@ -8640,7 +8642,7 @@ NUU Mobile:
       model: 'G2'
     - regex: 'N5702L'
       model: 'G3'
-    - regex: '(N5001L)[;)/ ]'
+    - regex: '(N5001L|A6L-C)[;)/ ]'
       model: '$1'
 
 # NYX Mobile
@@ -14412,7 +14414,7 @@ Kuliao:
 
 # Sugar
 Sugar:
-  regex: 'SUGAR (C21|[YF]11|[YF]9|C6|Y7|Y15)[);/ ]'
+  regex: 'SUGAR (C21|[YF]11|[YFS]9|C6|Y7|Y15)[);/ ]'
   device: 'smartphone'
   model: '$1'
 
@@ -14508,3 +14510,10 @@ Orbic:
       model: 'Wonder'
     - regex: 'RC501L[);/ ]'
       model: 'Slim'
+
+# RED
+RED:
+  regex: '(H1A1000)[);/ ]'
+  device: 'smartphone'
+  model: 'Hydrogen One'
+
