feat(device) detect brand Huawei model: P smart (2019) (POT-LX1AF);

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5529,7 +5529,7 @@ Huawei:
       model: 'Nova Youth'
     - regex: 'FIG-L(?:A1|X[123])[);/ ]'
       model: 'P smart'
-    - regex: 'POT-(LX(?:[13]|2J)|AL00)[);/ ]'
+    - regex: 'POT-(LX(?:[13]|2J|1AF)|AL00)[);/ ]'
       model: 'P smart (2019)'
     - regex: 'STK-LX1[);/ ]'
       model: 'P smart Z'
