Adds detection for MLS devices

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12941,9 +12941,109 @@ Vivax:
     - regex: 'SMART Point X5010'
       model: 'Smart Point X5010'
 
+# MLS
+MLS:
+  regex: 'IQ(?:0705|1010w?|1012|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1806|1808|1810B_M|1832|1850|1890|5017|9610|E100|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W511T|W553|W608|W626)(?: Build|[;/\)])'
+  device: 'smartphone'
+  models:
+    - regex: 'IQ0705'
+      model: 'iQTalk Twist'
+    - regex: 'IQ1010W?'
+      model: 'iQTab 10'
+      device: 'tablet'
+    - regex: 'IQ1012'
+      model: 'iQTab Brave 3G'
+      device: 'tablet'
+    - regex: 'IQ1025'
+      model: 'iQTab Action 4G'
+      device: 'tablet'
+    - regex: 'IQ1380'
+      model: 'Brain 3G'
+    - regex: 'IQ1401'
+      model: 'iQTalk Verse 4G'
+    - regex: 'IQ1436'
+      model: 'Color mini 4G'
+    - regex: 'IQ1452a'
+      model: 'TOP-S 4G'
+    - regex: 'IQ1453'
+      model: 'Trend 4G'
+    - regex: 'IQ1470'
+      model: 'iQTalk Onyx'
+    - regex: 'IQ1502a'
+      model: 'iQTalk Flame'
+    - regex: 'IQ1511'
+      model: 'iQTalk Spicy'
+    - regex: 'IQ1552'
+      model: 'iQTalk Titan 4G'
+    - regex: 'IQ1553'
+      model: 'Color 3 4G'
+    - regex: 'IQ1568'
+      model: 'Range 4G'
+    - regex: 'IQ1570'
+      model: 'iQTalk Color 5.5 4G'
+    - regex: 'IQ1806'
+      model: 'iQTab Rose'
+      device: 'tablet'
+    - regex: 'IQ1808'
+      model: 'iQTab Master'
+      device: 'tablet'
+    - regex: 'IQ1810B_M'
+      model: 'iQTab Novel 3G'
+      device: 'tablet'
+    - regex: 'IQ1832'
+      model: 'Jet 3G'
+      device: 'tablet'
+    - regex: 'IQ1850'
+      model: 'Diamond 5.2 4G'
+    - regex: 'IQ1890'
+      model: 'iQTalk Aura'
+    - regex: 'IQ5017'
+      model: 'Slice 4G'
+    - regex: 'IQ9610'
+      model: 'Angel 3G'
+    - regex: 'IQG550'
+      model: 'Style 4G'
+    - regex: 'IQGW516'
+      model: 'F5'
+    - regex: 'IQE100'
+      model: 'Energy 4G'
+    - regex: 'IQEL41'
+      model: 'Fab 4G'
+    - regex: 'IQL30'
+      model: 'Status 4G'
+    - regex: 'IQL50'
+      model: 'More 4G'
+    - regex: 'IQL51'
+      model: 'Wave 4G'
+    - regex: 'IQM801'
+      model: 'Brace 2018 4G'
+      device: 'tablet'
+    - regex: 'IQM1001'
+      model: 'Level 4G'
+      device: 'tablet'
+    - regex: 'IQN700'
+      model: 'Inspire 4G'
+    - regex: 'IQP50'
+      model: 'Ruby 4G'
+    - regex: 'IQS300'
+      model: 'DX 4G'
+    - regex: 'IQS1001'
+      model: 'Vista 4G' ## Gold
+      device: 'tablet'
+    - regex: 'IQR300'
+      model: 'R3 4G'
+    - regex: 'IQW608'
+      model: 'Regal'
+    - regex: 'IQW626'
+      model: 'D6 4G'
+    - regex: 'IQW511T'
+      model: 'Liberal'
+    - regex: 'IQW553'
+      model: 'Alu 5.5'
+
 # Fly
 Fly:
-  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!1010)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?: Build|[;/\)])'
+  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!10[134]0)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?: Build|[;/\)])'
   device: 'smartphone'
   models:
     - regex: '(?:Fly_)?IQ310(?: Build|[;/\)])'
