Added a few Android devices (#6318)
* Added Samsung GALAXY A30s

# Conflicts:
#	Tests/fixtures/smartphone-9.yml

* Added Samsung GALAXY A01

# Conflicts:
#	Tests/fixtures/smartphone-9.yml

* Added LG K50S

# Conflicts:
#	Tests/fixtures/smartphone-6.yml

* Added Samsung GALAXY J4 Core variant

# Conflicts:
#	Tests/fixtures/smartphone-9.yml

* Added Huawei P30 Lite variant

# Conflicts:
#	Tests/fixtures/smartphone-14.yml

* Enhanced a few regexes

* Added LG K4

# Conflicts:
#	Tests/fixtures/smartphone-6.yml

* Added LG G4 Stylus variant

# Conflicts:
#	Tests/fixtures/smartphone-6.yml

* Added Samsung GALAXY A20s

# Conflicts:
#	Tests/fixtures/smartphone-9.yml

* Added Lanix Ilium Alpha 950

# Conflicts:
#	Tests/fixtures/smartphone-6.yml

* Added LG X Cam

# Conflicts:
#	Tests/fixtures/smartphone-6.yml

* Added RED Hydrogen One

# Conflicts:
#	Tests/fixtures/smartphone-14.yml

* Added Senwa Inizio

# Conflicts:
#	Tests/fixtures/smartphone-3.yml

* Added Samsung GALAXY A70 variants

# Conflicts:
#	Tests/fixtures/smartphone-9.yml

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5501,7 +5501,7 @@ Huawei:
       model: 'Nova Youth'
     - regex: 'FIG-L(?:A1|X[123])[);/ ]'
       model: 'P smart'
-    - regex: 'POT-(LX(?:[13]|2J)|AL00)[);/ ]'
+    - regex: 'POT-(?:LX(?:[13]|2J)|AL00)[);/ ]'
       model: 'P smart (2019)'
     - regex: 'STK-LX1[);/ ]'
       model: 'P smart Z'
@@ -5517,11 +5517,11 @@ Huawei:
       model: 'P20'
     - regex: 'ANE-(?:LX[123]|TL00)[);/ ]'
       model: 'P20 Lite'
-    - regex: '(CLT-(?:AL0[01]|TL0[01]|L(?:04|[02]9))|HW-01K)[);/ ]'
+    - regex: '(?:CLT-(?:AL0[01]|TL0[01]|L(?:04|[02]9))|HW-01K)[);/ ]'
       model: 'P20 Pro'
     - regex: '(ELE-L(?:04|09|29)|ELE-[AT]L00)[);/ ]'
       model: 'P30'
-    - regex: '(MAR-(?:LX(1[BM]|2)|TL00)|NIC-LX1A)[);/ ]'
+    - regex: '(?:MAR-(?:LX(?:1[BM]|2|3BM)|TL00)|NIC-LX1A)[);/ ]'
       model: 'P30 Lite'
     - regex: 'MAR-LX[13]A[);/ ]'
       model: 'P30 Lite Dual SIM'
@@ -5535,9 +5535,9 @@ Huawei:
       model: 'P40 Pro'
     - regex: 'GRA-(?:L09|UL00)[);/ ]'
       model: 'P8'
-    - regex: '(ALE-L(?:02|21|23)|ALE-UL00|ALE-TL00)[);/ ]'
+    - regex: '(?:ALE-L(?:02|21|23)|ALE-UL00|ALE-TL00)[);/ ]'
       model: 'P8 Lite (2015)'
-    - regex: '(PRA-L(?:A1|X2|X1|X3)|hi6210sft)[);/ ]'
+    - regex: '(?:PRA-L(?:A1|X2|X1|X3)|hi6210sft)[);/ ]'
       model: 'P8 Lite (2017)'
     - regex: 'EVA-(?:AL[10]0|L[012]9|[TCD]L00)[);/ ]'
       model: 'P9'
@@ -6806,7 +6806,7 @@ Land Rover:
 
 # lanix
 Lanix:
-  regex: 'LANIX-([a-z0-9]+)|Ilium[ _]|X120C'
+  regex: 'LANIX-([a-z0-9]+)|Ilium[ _]|X120C|Alpha 950'
   device: 'smartphone'
   models:
     - regex: 'ILIUM[ _]PAD[ _]([^;/]+) Build'
@@ -6818,6 +6818,8 @@ Lanix:
       model: 'Ilium $1'
     - regex: 'ILIUM[ _]([^;/]+) Build'
       model: 'Ilium $1'
+    - regex: 'Alpha 950'
+      model: 'Ilium Alpha 950'
     - regex: 'LANIX-([a-z0-9]+)'
       device: 'feature phone'
       model: '$1'
@@ -7256,7 +7258,7 @@ LG:
       model: 'G4'
     - regex: 'LG-H525n?'
       model: 'G4c'
-    - regex: 'LG-(?:H540|H630)'
+    - regex: 'LG-(?:H540|H542|H630)'
       model: 'G4 Stylus'
     - regex: 'LG-H735'
       model: 'G4 Beat'
@@ -7324,6 +7326,8 @@ LG:
       model: 'Q60'
     - regex: 'LM-X210K'
       model: 'X2'
+    - regex: 'LG-K580'
+      model: 'X Cam'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
     - regex: 'LM-X(?:41[05]K|410S)'
@@ -7338,8 +7342,12 @@ LG:
       model: 'LM-X410'
     - regex: 'LM-X420N'
       model: 'X4 (2019)'
+    - regex: 'LG-X230'
+      model: 'K4'
     - regex: 'LM-X420'
       model: 'K40'
+    - regex: 'LM-X540'
+      model: 'K50S'
     - regex: 'LM-X510[KLS]'
       model: 'X5'
     - regex: 'LM-X625N1'
@@ -10073,6 +10081,8 @@ Samsung:
       model: 'GALAXY Centura'
     - regex: 'vollo Vi86[);/ ]'
       model: 'Vollo Vi86'
+    - regex: '(?:SAMSUNG-)?SM-A015[FGM]'
+      model: 'GALAXY A01'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'GALAXY A2 Core'
     - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|[0FGHMY])'
@@ -10129,8 +10139,12 @@ Samsung:
       model: 'GALAXY A20'
     - regex: '(?:SAMSUNG-)?SM-A202[FG]'
       model: 'GALAXY A20e'
-    - regex: '(?:SAMSUNG-)?SM-A305(?:FN|GT|[FG])'
+    - regex: '(?:SAMSUNG-)?SM-A207[FM]'
+      model: 'GALAXY A20s'
+    - regex: '(?:SAMSUNG-)?SM-A305(?:FN|GN|GT|YN|[FG])'
       model: 'GALAXY A30'
+    - regex: '(?:SAMSUNG-)?SM-A307(?:FN|GN|GT|[FG])'
+      model: 'GALAXY A30s'
     - regex: '(?:SAMSUNG-)?SM-A405FN'
       model: 'GALAXY A40'
     - regex: '(?:SAMSUNG-)?SM-A3051'
@@ -10139,7 +10153,7 @@ Samsung:
       model: 'GALAXY A50'
     - regex: '(?:SAMSUNG-)?SM-A515[F]'
       model: 'GALAXY A51'
-    - regex: '(?:SAMSUNG-)?SM-A705(?:FN|[FG])'
+    - regex: '(?:SAMSUNG-)?SM-A705(?:FN|GM|MN|YN|[W0])'
       model: 'GALAXY A70'
     - regex: '(?:SAMSUNG-)?GT-I9301I'
       model: 'GALAXY S III Neo'
@@ -10181,9 +10195,9 @@ Samsung:
       model: 'GALAXY J5 Prime'
     - regex: '(?:SAMSUNG-)?SM-J600[FG]'
       model: 'GALAXY J6'
-    - regex: '(?:SAMSUNG-)?SM-J610[GF]'
+    - regex: '(?:SAMSUNG-)?SM-J610[FG]'
       model: 'GALAXY J6+'
-    - regex: '(?:SAMSUNG-)?SM-J410F'
+    - regex: '(?:SAMSUNG-)?SM-J410[FG]'
       model: 'GALAXY J4 Core'
     - regex: '(?:SAMSUNG-)?SM-J415(?:F|FN)'
       model: 'GALAXY J4+'
@@ -10458,7 +10472,7 @@ Sencor:
 
 # Senwa
 Senwa:
-  regex: 'Senwa|(?:S\-?(?:471|7[12]5|6[01]5|915|905TL|1000)|V705B)[ /;\)]'
+  regex: 'Senwa|(?:S\-?(?:471|7[12]5|6[01]5|915|905TL|1000|5018)|V705B)[ /;\)]'
   device: 'smartphone'
   models:
     - regex: 'S\-?471[ /;\)]'
@@ -10469,6 +10483,8 @@ Senwa:
       model: 'Odin'
     - regex: 'S\-?1000[ /;\)]'
       model: 'Odin'
+    - regex: 'S\-?5018[ /;\)]'
+      model: 'Inizio'
     - regex: 'S\-?(615|7[12]5|915)[ /;\)]'
       model: 'S$1'
     - regex: 'V705B[ /;\)]'
@@ -14443,3 +14459,9 @@ Macoox:
   regex: '(MC-X7MINI)[);/ ]'
   device: 'smartphone'
   model: 'MC-X7 Mini'
+
+# Red
+RED:
+  regex: 'H1A1000[);/ ]'
+  device: 'smartphone'
+  model: 'Hydrogen One'
