--- a/Tests/fixtures/smartphone.yml
+++ b/Tests/fixtures/smartphone.yml
@@ -160,23 +160,6 @@
   os_family: Android
   browser_family: Chrome
 - 
-  user_agent: Mozilla/5.0 (Linux; Android 7.0; iQS300 Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.92 Mobile Safari/537.36 Instagram 111.1.0.25.152 Android (24/7.0; 272dpi; 720x1198; MLS; iQS300; iQS300; mt6735; el_GR; 173238729)
-  os:
-    name: Android
-    short_name: AND
-    version: "7.0"
-    platform: ""
-  client:
-    type: mobile app
-    name: Instagram App
-    version: "111.1.0.25.152"
-  device:
-    type: smartphone
-    brand: LS
-    model: DX 4G
-  os_family: Android
-  browser_family: Unknown
-- 
   user_agent: Mozilla/5.0 (Android 7.0; Mobile; rv:52.0) Gecko/52.0 Mobicip/2.3.1_r747
   os:
     name: Android
@@ -9980,5 +9963,25 @@
     type: smartphone
     brand: AL
     model: One Touch 985
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 2.3.5; fr-fr; ALCATEL one touch 990C+ Build/GRJ90) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
+  os:
+    name: Android
+    short_name: AND
+    version: "2.3.5"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: "533.1"
+  device:
+    type: smartphone
+    brand: AL
+    model: One Touch 990C+
   os_family: Android
   browser_family: Android Browser
