--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -4540,6 +4540,26 @@
   os_family: Android
   browser_family: Unknown
 - 
+  user_agent: Mozilla/5.0 (Linux; Android 4.0.4; Infinityll Build/IMM76D) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.2959.138 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "4.0.4"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: "60.0.2959.138"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: EX
+    model: Infinity II
+  os_family: Android
+  browser_family: Chrome
+- 
   user_agent: Mozilla/5.0 (Linux; Android 4.0.4; Informer 705 Build/IMM76D) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/29.0.1547.72 Mobile Safari/537.36 OPR/16.0.1212.65583
   os:
     name: Android
@@ -9973,23 +9993,3 @@
     model: TZ726
   os_family: Android
   browser_family: Chrome
-- 
-  user_agent: Mozilla/5.0 (Linux; arm; Android 8.1.0; TZ727) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.143 YaBrowser/19.7.2.90.00 Mobile Safari/537.36
-  os:
-    name: Android
-    short_name: AND
-    version: "8.1.0"
-    platform: ARM
-  client:
-    type: browser
-    name: Yandex Browser
-    short_name: YA
-    version: "19.7.2.90.00"
-    engine: Blink
-    engine_version: ""
-  device:
-    type: tablet
-    brand: I6
-    model: TZ727
-  os_family: Android
-  browser_family: Unknown
