feat(device) detect brand Sharp model: Aquos Crystal (305SH); feat(device) detect brand NUU model: A3;

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8640,8 +8640,8 @@ NUU Mobile:
   regex: 'NUU_|((?:N(5702|5001)L|S6001L)|A6L-C)[;)/ ]'
   device: 'smartphone'
   models:
-    - regex: 'NUU_A1'
-      model: 'A1'
+    - regex: 'NUU_A([13])'
+      model: 'A$1'
     - regex: 'S6001L'
       model: 'G2'
     - regex: 'N5702L'
@@ -11093,7 +11093,7 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|SH-M0[89]|S3-SH|SH-Z(10|01)|SH-C02|AQUOS|506SH|SHL22|SHV35|FS80(1[08]|32|28|0[29])[);/ ]|TG-L900S'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|SH-M0[89]|S3-SH|SH-Z(10|01)|SH-C02|AQUOS|305SH|506SH|SHL22|SHV35|FS80(1[08]|32|28|0[29])[);/ ]|TG-L900S'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11115,6 +11115,8 @@ Sharp:
       model: 'Aquos R2'
     - regex: 'SH-C02[);/ ]'
       model: 'Aquos V'
+    - regex: '305SH[);/ ]'
+      model: 'Aquos Crystal'
     - regex: 'FS8010|SH-M08'
       model: 'Aquos S2'
     - regex: 'FS8032'
