Adds detection for Clout and MLS devices (#6319)
* Improves detection for Sony Xperia E3 Dual (refs #6067)

* Adds detection for Clout devices

* Adds detection for Explay Infinity II

* Adds detection for Highscreen Boost 2 SE

* Adds detection for various Fly devices

* Adds detection for MLS devices

* sort test fixtures

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3399,6 +3399,26 @@ CUBOT:
     - regex: '([^;/]+) Build/CUBOT'
       model: '$1'
 
+# Clout
+Clout:
+  regex: 'Hind[ _]5\.1|X417[ _]Amaze|X418[ _]Zest|X421[ _]Nova|X422[ ]Exotic|X425[ _]Shavit|X428[ _]Astute'
+  device: 'smartphone'
+  models:
+    - regex: 'Hind[ _]5\.1'
+      model: 'Hind 5.1'
+    - regex: 'X417[ _]Amaze'
+      model: 'X417 Amaze'
+    - regex: 'X418[ _]Zest'
+      model: 'X418 Zest'
+    - regex: 'X421[ _]Nova'
+      model: 'X421 Nova'
+    - regex: 'X422[ _]Exotic'
+      model: 'X422 Exotic'
+    - regex: 'X425[ _]Shavit'
+      model: 'X425 Shavit'
+    - regex: 'X428[ _]Astute'
+      model: 'X428 Astute'
+
 # Concord
 Concord:
   regex: 'Concord[ _-]|Flyfix 6|C-721[);/ ]'
@@ -3960,7 +3980,7 @@ Senseit:
 
 # Sony & Sony Ericsson (combined as they are mixed up)
 Sony:
-  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|([456]0[12]|701)SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1234567]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[12]K|1L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771'
+  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|([456]0[12]|701)SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1234567]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[12]K|1L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
   device: 'smartphone'
   models:
     # SONY ERICSSON: explicit smartphone models
@@ -4172,7 +4192,7 @@ Sony:
       model: 'Xperia E1 Dual'
     - regex: '(?:Sony(?:Ericsson)?)?D22(?:0[236]|43)'
       model: 'Xperia E3'
-    - regex: '(?:Sony(?:Ericsson)?)?D2212'
+    - regex: '(?:Sony(?:Ericsson)?)?D2212|E3 Dual'
       model: 'Xperia E3 Dual'
     - regex: '(?:Sony(?:Ericsson)?)?E20[34]3'
       model: 'Xperia E4g Dual'
@@ -4524,7 +4544,7 @@ Evolveo:
 
 # Explay
 Explay:
-  regex: 'Explay|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-3]|RioPlay|Leader'
+  regex: 'Explay|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-3]|RioPlay|Leader|Infinityll'
   device: 'tablet'
   models:
     - regex: 'ActiveD[ _]7.4[ _]3G'
@@ -4533,6 +4553,8 @@ Explay:
       model: 'ActiveD 8.2 3G'
     - regex: 'CinemaTV[ _]3G'
       model: 'CinemaTV 3G'
+    - regex: 'Infinityll'
+      model: 'Infinity II'
     - regex: 'Informer[ _]([0-9]+(?:[ _]3G)?)'
       model: 'Informer $1'
     - regex: 'Surfer[ _]([0-9\.]+(?:[ _]3G)?)'
@@ -12919,9 +12941,109 @@ Vivax:
     - regex: 'SMART Point X5010'
       model: 'Smart Point X5010'
 
+# MLS
+MLS:
+  regex: 'IQ(?:0705|1010w?|1012|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1806|1808|1810B_M|1832|1850|1890|5017|9610|E100|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W511T|W553|W608|W626)(?: Build|[;/\)])'
+  device: 'smartphone'
+  models:
+    - regex: 'IQ0705'
+      model: 'iQTalk Twist'
+    - regex: 'IQ1010W?'
+      model: 'iQTab 10'
+      device: 'tablet'
+    - regex: 'IQ1012'
+      model: 'iQTab Brave 3G'
+      device: 'tablet'
+    - regex: 'IQ1025'
+      model: 'iQTab Action 4G'
+      device: 'tablet'
+    - regex: 'IQ1380'
+      model: 'Brain 3G'
+    - regex: 'IQ1401'
+      model: 'iQTalk Verse 4G'
+    - regex: 'IQ1436'
+      model: 'Color mini 4G'
+    - regex: 'IQ1452a'
+      model: 'TOP-S 4G'
+    - regex: 'IQ1453'
+      model: 'Trend 4G'
+    - regex: 'IQ1470'
+      model: 'iQTalk Onyx'
+    - regex: 'IQ1502a'
+      model: 'iQTalk Flame'
+    - regex: 'IQ1511'
+      model: 'iQTalk Spicy'
+    - regex: 'IQ1552'
+      model: 'iQTalk Titan 4G'
+    - regex: 'IQ1553'
+      model: 'Color 3 4G'
+    - regex: 'IQ1568'
+      model: 'Range 4G'
+    - regex: 'IQ1570'
+      model: 'iQTalk Color 5.5 4G'
+    - regex: 'IQ1806'
+      model: 'iQTab Rose'
+      device: 'tablet'
+    - regex: 'IQ1808'
+      model: 'iQTab Master'
+      device: 'tablet'
+    - regex: 'IQ1810B_M'
+      model: 'iQTab Novel 3G'
+      device: 'tablet'
+    - regex: 'IQ1832'
+      model: 'Jet 3G'
+      device: 'tablet'
+    - regex: 'IQ1850'
+      model: 'Diamond 5.2 4G'
+    - regex: 'IQ1890'
+      model: 'iQTalk Aura'
+    - regex: 'IQ5017'
+      model: 'Slice 4G'
+    - regex: 'IQ9610'
+      model: 'Angel 3G'
+    - regex: 'IQG550'
+      model: 'Style 4G'
+    - regex: 'IQGW516'
+      model: 'F5'
+    - regex: 'IQE100'
+      model: 'Energy 4G'
+    - regex: 'IQEL41'
+      model: 'Fab 4G'
+    - regex: 'IQL30'
+      model: 'Status 4G'
+    - regex: 'IQL50'
+      model: 'More 4G'
+    - regex: 'IQL51'
+      model: 'Wave 4G'
+    - regex: 'IQM801'
+      model: 'Brace 2018 4G'
+      device: 'tablet'
+    - regex: 'IQM1001'
+      model: 'Level 4G'
+      device: 'tablet'
+    - regex: 'IQN700'
+      model: 'Inspire 4G'
+    - regex: 'IQP50'
+      model: 'Ruby 4G'
+    - regex: 'IQS300'
+      model: 'DX 4G'
+    - regex: 'IQS1001'
+      model: 'Vista 4G' ## Gold
+      device: 'tablet'
+    - regex: 'IQR300'
+      model: 'R3 4G'
+    - regex: 'IQW608'
+      model: 'Regal'
+    - regex: 'IQW626'
+      model: 'D6 4G'
+    - regex: 'IQW511T'
+      model: 'Liberal'
+    - regex: 'IQW553'
+      model: 'Alu 5.5'
+
 # Fly
 Fly:
-  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ[0-9]{3,})[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?: Build|[;/\)])'
+  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!10[134]0)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?(?: Build|[;/\)])'
   device: 'smartphone'
   models:
     - regex: '(?:Fly_)?IQ310(?: Build|[;/\)])'
@@ -13040,10 +13162,16 @@ Fly:
       model: 'Glory'
     - regex: '(?:Fly_)?IQ432(?: Build|[;/\)])'
       model: 'Era Nano 1'
-    - regex: '(?:Fly_)?IQ434(?: Build|[;/\)])'
-      model: 'Era Nano 5'
     - regex: '(?:Fly_)?IQ436(?: Build|[;/\)])'
       model: 'Era Nano 3'
+    - regex: '(?:Fly_)?IQ4490(?: Build|[;/\)])'
+      model: 'Era Nano 4'
+    - regex: '(?:Fly_)?IQ434(?: Build|[;/\)])'
+      model: 'Era Nano 5'
+    - regex: '(?:Fly_)?IQ4406(?: Build|[;/\)])'
+      model: 'Era Nano 6'
+    - regex: '(?:Fly_)?IQ436i(?: Build|[;/\)])'
+      model: 'Era Nano 9'
     - regex: '(?:Fly_)?IQ440(?: Build|[;/\)])'
       model: 'Energy'
     - regex: '(?:Fly_)?IQ4401(?: Build|[;/\)])'
@@ -13064,6 +13192,10 @@ Fly:
       model: 'Magic'
     - regex: '(?:Fly_)?IQ447(?: Build|[;/\)])'
       model: 'Era Life 1'
+    - regex: '(?:Fly_)?IQ456(?: Build|[;/\)])'
+      model: 'Era Life 2'
+    - regex: '(?:Fly_)?IQ4409 Quad(?: Build|[;/\)])'
+      model: 'Era Life 4'
     - regex: '(?:Fly_)?IQ448(?: Build|[;/\)])'
       model: 'Chic'
     - regex: '(?:Fly_)?IQ449(?: Build|[;/\)])'
@@ -13078,14 +13210,10 @@ Fly:
       model: 'Ego Vision 1'
     - regex: '(?:Fly_)?IQ454(?: Build|[;/\)])'
       model: 'Evo Tech 1'
-    - regex: '(?:Fly_)?IQ456(?: Build|[;/\)])'
-      model: 'Era Life 2'
     - regex: '(?:Fly_)?IQ4403(?: Build|[;/\)])'
       model: 'Energy 3'
     - regex: '(?:Fly_)?IQ4404(?: Build|[;/\)])'
       model: 'Spark'
-    - regex: '(?:Fly_)?IQ4406(?: Build|[;/\)])'
-      model: 'Era Nano 6'
     - regex: '(?:Fly_)?IQ4410 Quad(?: Build|[;/\)])'
       model: 'Phoenix'
     - regex: '(?:Fly_)?IQ4411(?: Build|[;/\)])'
@@ -13098,11 +13226,9 @@ Fly:
       model: 'Evo Tech 3'
     - regex: '(?:Fly_)?IQ4415 Quad(?: Build|[;/\)])'
       model: 'Era Style 3'
-    - regex: '(?:Fly_)?IQ4490(?: Build|[;/\)])'
-      model: 'Era Nano 4'
     - regex: '(?:Fly_)?IQ4504 Quad(?: Build|[;/\)])'
       model: 'Evo Energy 5'
-    - regex: '(?:Fly_)?IQ([0-9]+) ?(?:Quad|Firebird|Quattro)? Build'
+    - regex: '(?:Fly_)?IQ([0-9]+[i]? ?(?:Quad|Firebird|Quattro)?)(?: Build|[;/\)])'
       model: 'IQ$1'
     - regex: 'Fly[ _\-]?([a-z0-9_]+)/'
       model: '$1'
@@ -13832,7 +13958,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II|FestXL)[;)/ ]'
+  regex: 'HIGHSCREEN|(Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice Max|Power Rage Evo|Zera[ _][UFS])[;)/ ]'
@@ -13851,6 +13977,8 @@ Highscreen:
       model: 'Easy F Pro'
     - regex: 'BOOST II[;)/ ]'
       model: 'Boost 2'
+    - regex: 'BOOST IIse[;)/ ]'
+      model: 'Boost 2 SE'
 
 # CVTE
 CVTE:
