feat(fixtures): remove duplicate test RED Hydrogen One;

--- a/Tests/fixtures/smartphone-10.yml
+++ b/Tests/fixtures/smartphone-10.yml
@@ -595,7 +595,7 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: R8
+    brand: RD
     model: Hydrogen One
   os_family: Android
   browser_family: Chrome
